Alignment Fixes for Responsive and HTML Textarea Fix

--- a/style.css
+++ b/style.css
@@ -262,23 +262,13 @@ article {
 
 /****Media Queries****/
 @media (max-width:600px) {
-  .card-body {
-    display: block;
-    height: 90px;
-    font-size: 120%;
-    font-weight: 400;
-    margin-bottom: 12px;
-    margin-top: 12px;
-    padding-left: 8px;
-    width: 250px;
+  article {
+    width: 400px;
   }
 
-  .card-controls {
-    width: 250px;
-  }
-
+  .card-controls,
   .count {
-    width: 250px;
+    width: 400px;
   }
 
   .clear-all-button,
@@ -287,66 +277,44 @@ article {
     font-size: 100%;
     height: 30.6px;
     margin-top: 20px;
-    width: 250px;
-  }
-
-  h1 {
-    font-size: 33px;
-    font-weight: bold;
-    padding-bottom: 16px;
-    padding-top: 30px;
-  }
-
-  h2 {
-    display: inline-block;
-    margin: auto;
-    margin-top: 25px;
-    width: 225px;
-  }
-
-  html {
-    height: 100%;
-    width: 100%;
+    width: 400px;
   }
 
   input,
   textarea {
     box-sizing: border-box;
     display: block;
-    font-size: 120%;
     font-weight: 400;
-    height: 30px;
     padding-left: 8px;
-    width: 250px;
+    width: 400px;
   }
 
   .importance {
     font-size: 12px;
     margin: 1px;
     padding: 8px 4px;
-    width: 50px;
   }
 
   .importance-btns {
-    display: block;
-    width: 280px;
+    display: flex;
+    width: 400px;
   }
 
   .search {
     margin-top: 20px;
-    width: 250px;
+    width: 400px;
   }
 
   .save-button {
     display: block;
     font-size: 20px;
     height: 40px;
-    width: 250px;
+    width: 400px;
   }
 
   .user-body {
     font-size: 21px;
     margin-top: 10px;
-    width: 250px;
+    width: 400px;
   }
 }
